--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "dependencies": {
     "inquirer": "^9.2.23",
     "jest": "^29.7.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "babel-jest": "^29.7.0"
   }
 }
